--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
         ports:
             - 6080:6080
         environment: 
-            - VNC_PASSWD=AliAly032230
+            - VNC_PASSWD=root
             - GEOMETRY=1280x768
             - TZ=Asia/Shanghai
             - DEPTH=24
